small styling improvements

--- a/pages/blog/deploy-your-site-on-the-decentralised-cloud/02-chapter.mdx
+++ b/pages/blog/deploy-your-site-on-the-decentralised-cloud/02-chapter.mdx
@@ -114,4 +114,8 @@ Create your deployment and wait for bids to come in. Once you have specified you
 
 To complete the process, you need to map the generated URI endpoint to your domain name. This can be achieved by adding a CNAME record in your DNS settings. A CNAME record creates an alias or nickname for a domain, acting as a pointer that redirects traffic from one domain to another.
 
+### Conclusion
+
+That's it. You have successfully deployed your site on a decentralized cloud, enjoying a cost reduction of 10 times compared to traditional cloud providers, all while ensuring the security of your personal information. Although the user interfaces for managing the infrastructure are still in their early stages and some technical knowledge is required, this option holds significant appeal for individuals who prioritise affordability and privacy.
+
 </TableOfContentSection>
